bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q3 (Execution Plan).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(product@0) as product, ENC_PT(label@1) as label]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(ENC_TF(ENC_PT(label@1))) ASC], preserve_partitioning=[false]
    FilterExec: NOT EBV(BOUND(testVar@2)), projection=[product@0, label@1]
      HashJoinExec: mode=CollectLeft, join_type=Left, on=[(product@0, product@0)], projection=[product@0, label@1, testVar@3]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?label
                DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/1999/02/22-rdf-syntax-ns#type>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType87>, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
              DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature541>, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
            FilterExec: EBV(GT(ENC_TF(p1@1), 4:4:156)), projection=[product@0]
              DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1>, object=?p1, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
          FilterExec: EBV(LT(ENC_TF(p3@1), 4:4:152)), projection=[product@0]
            DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric3>, object=?p3, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, testVar@2]
          DataSourceExec: [GPOS] subject=?product, predicate=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature>, object=<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature553>
          DataSourceExec: [GPOS] subject=?product, predicate=<http://www.w3.org/2000/01/rdf-schema#label>, object=?testVar, additional_filters=[DynamicFilter [ Generation 2; product in (<object id range>) ]]
