bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q3 (Execution Plan, Object ID).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
ProjectionExec: expr=[ENC_PT(product@0) as product, ENC_PT(label@1) as label]
  SortExec: TopK(fetch=10), expr=[ENC_SORT(ENC_TF(ENC_PT(label@1))) ASC], preserve_partitioning=[false]
    FilterExec: NOT EBV(BOUND(testVar@2)), projection=[product@0, label@1]
      HashJoinExec: mode=CollectLeft, join_type=Left, on=[(product@0, product@0)], projection=[product@0, label@1, testVar@3]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable
                FilterExec: DynamicFilter [ product@0 >= 0 AND product@0 <= 82565 AND hash_lookup ]
                  DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType87>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= 0 AND product@0 <= 82565 AND hash_lookup ]]
              FilterExec: DynamicFilter [ product@0 >= 14690 AND product@0 <= 23196 AND product@0 IN (SET) ([14690, 14807, 17160, 17228, 19315, 19316, 19376, 19377, 21328, 21377, 23135, 23196]) ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature541>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= 14690 AND product@0 <= 23196 AND product@0 IN (SET) ([14690, 14807, 17160, 17228, 19315, 19316, 19376, 19377, 21328, 21377, 23135, 23196]) ]]
            FilterExec: EBV(GT(ENC_TF(p1@1), 4:4:156)), projection=[product@0]
              FilterExec: DynamicFilter [ product@0 >= 17228 AND product@0 <= 23135 AND product@0 IN (SET) ([17228, 19377, 23135]) ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?p1], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= 17228 AND product@0 <= 23135 AND product@0 IN (SET) ([17228, 19377, 23135]) ]]
          FilterExec: EBV(LT(ENC_TF(p3@1), 4:4:152)), projection=[product@0]
            FilterExec: DynamicFilter [ product@0 >= 17228 AND product@0 <= 23135 AND product@0 IN (SET) ([17228, 23135]) ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric3> ?p3], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= 17228 AND product@0 <= 23135 AND product@0 IN (SET) ([17228, 23135]) ]]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, testVar@2]
          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature553>], blank_node_mode=Variable
          FilterExec: DynamicFilter [ product@0 >= 14807 AND product@0 <= 23157 AND product@0 IN (SET) ([14807, 14854, 17160, 21336, 21341, 21370, 23157]) ]
            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?testVar], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= 14807 AND product@0 <= 23157 AND product@0 IN (SET) ([14807, 14854, 17160, 21336, 21341, 21370, 23157]) ]]
