bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q3 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
SortExec: TopK(fetch=10), expr=[AS_SORTABLE_BYTES(ENC_TF(label@1)) ASC], preserve_partitioning=[false]
  ProjectionExec: expr=[product@0 as product, label@1 as label]
    DecodeObjectIdsExec: projections=[decode(product) as product, decode(label) as label, p1, p3, testVar]
      FilterExec: EBV(GT(ENC_TF(p1@2), 4:4:156)) AND EBV(LT(ENC_TF(p3@3), 4:4:152)) AND NOT EBV(BOUND(testVar@4))
        DecodeObjectIdsExec: projections=[product, label, decode(p1) as p1, decode(p3) as p3, decode(testVar) as testVar]
          HashJoinExec: mode=CollectLeft, join_type=Left, on=[(product@0, product@0)], projection=[product@0, label@1, p1@2, p3@3, testVar@5]
            ProjectionExec: expr=[product__oid@0 as product, label__oid@1 as label, p1__oid@2 as p1, p3__oid@3 as p3]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, label__oid@1, p1__oid@2, p3__oid@4]
                HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, label__oid@1, p1__oid@3]
                  HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, label__oid@1]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, label__oid@1]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as label__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType87>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1609 AND object@3 = 86 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1609 AND 1609 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 86 AND 86 <= object_max@6, required_guarantees=[object in (86), predicate in (1609)]
                    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature541>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND object@3 = 691 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 691 AND 691 <= object_max@6, required_guarantees=[object in (691), predicate in (14913)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?p1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as p1__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14905 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14905 AND 14905 <= predicate_max@2, required_guarantees=[predicate in (14905)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric3> ?p3], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as p3__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14907 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14907 AND 14907 <= predicate_max@2, required_guarantees=[predicate in (14907)]
            ProjectionExec: expr=[product__oid@0 as product, testVar__oid@1 as testVar]
              HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product__oid@0, product__oid@0)], projection=[product__oid@0, testVar__oid@2]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature553>], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 14913 AND object@3 = 703, pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 14913 AND 14913 <= predicate_max@2 AND object_null_count@7 != row_count@4 AND object_min@5 <= 703 AND 703 <= object_max@6, required_guarantees=[object in (703), predicate in (14913)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?testVar], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as product__oid, object@3 as testVar__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
