bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q3 (Execution Plan, Plain Term).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
SortExec: TopK(fetch=10), expr=[ENC_SORT(ENC_TF(label@1)) ASC], preserve_partitioning=[false]
  FilterExec: NOT EBV(BOUND(testVar@2)), projection=[product@0, label@1]
    HashJoinExec: mode=CollectLeft, join_type=Left, on=[(product@0, product@0)], projection=[product@0, label@1, testVar@3]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
            HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, label@1]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable
              FilterExec: DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Vendor9,data_type:,language_tag:} AND hash_lookup ]
                DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/1999/02/22-rdf-syntax-ns#type> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductType87>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature1,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Vendor9,data_type:,language_tag:} AND hash_lookup ]]
            FilterExec: DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product3,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:} AND product@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product3,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product472,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product473,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product532,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product533,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product749,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product797,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product910,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer21/Product970,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer3/Product118,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product214,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:}]) ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature541>], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product3,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:} AND product@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer1/Product3,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product472,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product473,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product532,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product533,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product749,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer17/Product797,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product910,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer21/Product970,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer3/Product118,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product214,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:}]) ]]
          FilterExec: EBV(GT(ENC_TF(p1@1), 4:4:156)), projection=[product@0]
            FilterExec: DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product533,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:} AND product@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product533,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product910,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:}]) ]
              DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?p1], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product533,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:} AND product@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer11/Product533,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product910,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:}]) ]]
        FilterExec: EBV(LT(ENC_TF(p3@1), 4:4:152)), projection=[product@0]
          FilterExec: DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product910,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:} AND product@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product910,data_type:,language_tag:}]) ]
            DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric3> ?p3], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product910,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:} AND product@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer7/Product281,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product910,data_type:,language_tag:}]) ]]
      HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(product@0, product@0)], projection=[product@0, testVar@2]
        DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/ProductFeature553>], blank_node_mode=Variable
        FilterExec: DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product757,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product214,data_type:,language_tag:} AND product@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product757,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product762,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product791,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product932,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer3/Product118,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer4/Product164,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product214,data_type:,language_tag:}]) ]
          DeltaQuadStorageScanExec: index=GPOS, active_graph=Default Graph, triple_pattern=[?product <http://www.w3.org/2000/01/rdf-schema#label> ?testVar], blank_node_mode=Variable, pushed_filters=[DynamicFilter [ product@0 >= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product757,data_type:,language_tag:} AND product@0 <= {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product214,data_type:,language_tag:} AND product@0 IN (SET) ([{term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product757,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product762,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer16/Product791,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer20/Product932,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer3/Product118,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer4/Product164,data_type:,language_tag:}, {term_type:0,value:http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product214,data_type:,language_tag:}]) ]]
